--- a/demo.html
+++ b/demo.html
@@ -5,21 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Demos | ZenSite</title>
 
-<!-- ===== GOOGLE ANALYTICS (MISMO ID QUE INDEX) ===== -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-gtag('config', 'G-XXXXXXX');
-</script>
-
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
-
 body{
-  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter","Segoe UI",sans-serif;
+  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","SF Pro Text",sans-serif;
   background:#05070c;
   color:#fff;
   overflow-x:hidden;
@@ -31,8 +20,8 @@ body::before{
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 25% 25%,rgba(0,200,255,.15),transparent 40%),
-    radial-gradient(circle at 75% 70%,rgba(120,90,255,.2),transparent 45%),
+    radial-gradient(circle at 20% 20%,rgba(0,200,255,.18),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(120,90,255,.2),transparent 45%),
     #05070c;
   z-index:-2;
 }
@@ -47,10 +36,13 @@ body::after{
 /* HEADER */
 header{
   position:fixed;
-  top:0;left:0;
+  top:0;
+  left:0;
   width:100%;
   z-index:1000;
-  padding:18px 26px;
+  display:flex;
+  align-items:center;
+  padding:16px 26px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
@@ -65,122 +57,99 @@ header{
   font-weight:600;
   opacity:.85;
 }
-
-/* LANG */
 .lang{
-  position:fixed;
-  top:18px;
-  right:18px;
+  margin-left:auto;
   display:flex;
-  gap:6px;
+  gap:8px;
 }
 .lang button{
-  padding:4px 9px;
-  font-size:11px;
+  padding:4px 10px;
+  font-size:10px;
   border-radius:14px;
   border:1px solid rgba(255,255,255,.25);
   background:transparent;
   color:#fff;
   font-weight:700;
-  cursor:pointer;
 }
 .lang .active{
   background:#00cfff;
   color:#000;
+  border-color:#00cfff;
 }
 
 /* MAIN */
 main{
-  margin-top:150px;
-  padding:0 20px 140px;
-  max-width:1200px;
-  margin-inline:auto;
+  margin-top:130px;
+  padding:40px 20px 120px;
+  max-width:1100px;
+  margin:auto;
+  text-align:center;
 }
 
-/* TITLE */
+/* HERO */
 h1{
-  text-align:center;
-  font-size:clamp(40px,6vw,70px);
-  margin-bottom:14px;
+  font-size:clamp(42px,6vw,72px);
+  margin-bottom:16px;
+  font-weight:900;
 }
-.subtitle{
-  text-align:center;
-  max-width:880px;
-  margin:0 auto 50px;
-  font-size:clamp(17px,2.4vw,21px);
-  opacity:.9;
-  line-height:1.6;
+.hero-text{
+  font-size:20px;
+  opacity:.85;
+  max-width:640px;
+  margin:0 auto 60px;
 }
 
-/* SLIDER */
-.slider{
-  position:relative;
-  max-width:1000px;
-  margin:0 auto;
-  overflow:hidden;
+/* DEMOS */
+.demos{
+  display:grid;
+  gap:50px;
+}
+.demo-card{
+  background:rgba(255,255,255,.05);
   border-radius:28px;
-  background:rgba(255,255,255,.04);
-  box-shadow:0 50px 160px rgba(0,0,0,.9);
+  padding:24px;
+  box-shadow:0 40px 120px rgba(0,0,0,.8);
 }
-.track{
-  display:flex;
-  transition:transform .6s ease;
-}
-.slide{
-  min-width:100%;
-  padding:18px;
-}
-.slide img{
+.demo-card img{
   width:100%;
   border-radius:20px;
-  box-shadow:0 30px 90px rgba(0,0,0,.8);
+  margin-bottom:18px;
 }
-
-/* ARROWS */
-.arrow{
-  position:absolute;
-  top:50%;
-  transform:translateY(-50%);
-  width:52px;
-  height:52px;
-  border-radius:50%;
-  background:rgba(255,255,255,.12);
-  border:1px solid rgba(255,255,255,.25);
+.demo-card h3{
   font-size:26px;
-  color:#fff;
-  cursor:pointer;
+  margin-bottom:6px;
 }
-.arrow.left{left:18px}
-.arrow.right{right:18px}
-
-/* CTA */
-.cta-wrap{
-  margin-top:60px;
-  text-align:center;
+.demo-card p{
+  opacity:.8;
+  margin-bottom:18px;
 }
-.cta-wrap p{
-  max-width:760px;
-  margin:0 auto 20px;
-  font-size:18px;
-  opacity:.9;
-}
-.cta{
-  padding:16px 28px;
-  border:none;
+.demo-card a{
+  display:inline-block;
+  padding:12px 26px;
   border-radius:22px;
   background:#00cfff;
   color:#000;
-  font-weight:900;
-  font-size:17px;
-  cursor:pointer;
+  font-weight:700;
+  text-decoration:none;
 }
 
-/* FOOTER */
-footer{
-  text-align:center;
-  padding:50px 20px 30px;
-  opacity:.5;
-  font-size:13px;
+/* CTA */
+.cta{
+  margin-top:90px;
+}
+.cta h2{
+  font-size:34px;
+  margin-bottom:14px;
+}
+.cta a{
+  display:inline-block;
+  margin-top:20px;
+  padding:14px 34px;
+  border-radius:26px;
+  background:#00cfff;
+  color:#000;
+  font-weight:800;
+  text-decoration:none;
 }
 </style>
 </head>
@@ -189,88 +158,51 @@ footer{
 
 <header>
   <nav class="nav">
-    <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
-    <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
-    <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
-    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
+    <a href="index.html">Inicio</a>
+    <a href="demo.html">Demos</a>
+    <a href="planes.html">Planes</a>
+    <a href="nosotros.html">Nosotros</a>
   </nav>
+  <div class="lang">
+    <button class="active">ES</button>
+    <button>EN</button>
+  </div>
 </header>
 
-<div class="lang">
-  <button id="esBtn" class="active">ES</button>
-  <button id="enBtn">EN</button>
-</div>
-
 <main>
-  <h1 data-es="Demos reales" data-en="Real demos">Demos reales</h1>
+  <h1>Demos reales</h1>
+  <div class="hero-text">
+    Así se ve una web pensada para vender, no para decorar.
+  </div>
 
-  <p class="subtitle"
-     data-es="No son plantillas. Son ejemplos del nivel visual, fluidez y estructura que aplicamos en proyectos reales."
-     data-en="These are not templates. They show the visual level, flow and structure we apply to real projects.">
-  </p>
-
-  <div class="slider">
-    <button class="arrow left" onclick="prev()">‹</button>
-
-    <div class="track" id="track">
-      <div class="slide"><img src="demo1.jpg" alt="Demo 1"></div>
-      <div class="slide"><img src="demo2.jpg" alt="Demo 2"></div>
-      <div class="slide"><img src="demo3.jpg" alt="Demo 3"></div>
-      <div class="slide"><img src="demo4.jpg" alt="Demo 4"></div>
-      <div class="slide"><img src="demo5.jpg" alt="Demo 5"></div>
+  <section class="demos">
+    <div class="demo-card">
+      <img src="demo1.jpg" alt="Demo corporativo">
+      <h3>Web corporativa</h3>
+      <p>Presencia profesional clara, moderna y confiable.</p>
+      <a href="#">Ver demo</a>
     </div>
 
-    <button class="arrow right" onclick="next()">›</button>
-  </div>
+    <div class="demo-card">
+      <img src="demo2.jpg" alt="Landing">
+      <h3>Landing de conversión</h3>
+      <p>Diseñada para captar clientes desde el primer vistazo.</p>
+      <a href="#">Ver demo</a>
+    </div>
 
-  <div class="cta-wrap">
-    <p data-es="Este es el nivel que la mayoría de nuestros clientes obtiene con el Plan Z+."
-       data-en="This is the level most of our clients get with the Z+ Plan.">
-    </p>
-    <button class="cta" onclick="goPlans()">Ver Plan Z+</button>
+    <div class="demo-card">
+      <img src="demo3.jpg" alt="App">
+      <h3>Sistema / App web</h3>
+      <p>Experiencia tipo plataforma, no plantilla.</p>
+      <a href="#">Ver demo</a>
+    </div>
+  </section>
+
+  <div class="cta">
+    <h2>¿Quieres algo así para tu negocio?</h2>
+    <a href="planes.html">Ver planes</a>
   </div>
 </main>
-
-<footer>
-  © 2025 ZenSite. Todos los derechos reservados.
-</footer>
-
-<script>
-/* TRANSLATION */
-const esBtn=document.getElementById("esBtn");
-const enBtn=document.getElementById("enBtn");
-function setLang(lang){
-  document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
-    el.textContent = el.dataset[lang];
-  });
-}
-esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");};
-enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");};
-
-/* SLIDER */
-let index=0;
-const track=document.getElementById("track");
-const total=5;
-
-function update(){
-  track.style.transform=translateX(-${index*100}%);
-  gtag('event','demo_view',{demo:index+1});
-}
-function next(){
-  index=(index+1)%total;
-  update();
-}
-function prev(){
-  index=(index-1+total)%total;
-  update();
-}
-
-/* CTA */
-function goPlans(){
-  gtag('event','cta_demo_to_plans');
-  window.location.href="planes.html";
-}
-</script>
 
 </body>
 </html>
